--- a/Changelog.txt
+++ b/Changelog.txt
@@ -2,3 +2,4 @@ Changelog
 
 06-27-2025 ... 0.0.0.0 ... Movegen
 06-28-2025 ... 0.0.1.0 ... Makefile + Other Cleanups
+06-29-2025 ... 0.0.1.1 ... 960 Support
