--- a/Changelog.txt
+++ b/Changelog.txt
@@ -7,3 +7,4 @@ Changelog
 07-01-2025 ... 0.1.1.0 ... PV Table
 07-01-2025 ... 0.1.2.0 ... Iterative Deepening, Time Management
 07-01-2025 ... 0.1.2.1 ... Bench
+07-02-2025 ... 0.2.0.0 ... MVV-LVA Move Ordering
