--- a/Changelog.txt
+++ b/Changelog.txt
@@ -23,3 +23,5 @@ Changelog
 08-02-2025 ... 0.6.0.0 ... Reverse Futility Pruning ............. (177.7 +/- 47.7), (8 + 0.08), (SPRT, 242), (https://sscg13.pythonanywhere.com/test/654/)
 08-02-2025 ... 0.6.1.0 ... Null Move Pruning .................... (54.9 +/- 23.7) , (8 + 0.08), (SPRT, 606), (https://sscg13.pythonanywhere.com/test/659/)
 08-03-2025 ... 0.6.2.0 ... Aspiration Windows ................... (8.2 +/- 6.5)   , (8 + 0.08), (SPRT, 7048),(https://sscg13.pythonanywhere.com/test/666/)
+08-03-2025 ... 0.6.3.0 ... Killer Move .......................... (24.3 +/- 14.8) , (8 + 0.08), (SPRT, 1432),(https://sscg13.pythonanywhere.com/test/670/)
+08-04-2025 ... 0.7.0.0 ... Late Move Reductions ................. (64.3 +/- 25.2) , (8 + 0.08), (SPRT, 552), (https://sscg13.pythonanywhere.com/test/672/)
