--- a/Changelog.txt
+++ b/Changelog.txt
@@ -30,3 +30,4 @@ Changelog
 08-08-2025 ... 0.8.0.2 ... Mate Distance Prune in PV nodes
 08-08-2025 ... 0.8.0.3 ... Move UCI into Interface Object
 08-09-2025 ... 0.8.0.4 ... Alias Search Functions, Soft Node Limit
+08-09-2025 ... 0.8.1.0 ... Introduce Tapered Eval
