--- a/Changelog.txt
+++ b/Changelog.txt
@@ -36,3 +36,4 @@ Changelog
 09-23-2025 ... 0.8.2.1 ... Data Generation
 10-06-2025 ... 0.9.0.0 ... PSQT Tuning .......................... (324.4 +/- 65.1), (8 + 0.08), (N = 200), (Local)
 10-06-2025 ... 0.9.1.0 ... PSQT Tuning 2 ........................ (156.6 +/- 29.9), (8 + 0.08), (N = 400), (Local)
+10-08-2025 ... 0.9.2.0 ... PSQT Tuning 3 ........................ (54.7 +/- 19.1) , (8 + 0.08), (N = 800), (Local)
