--- a/Changelog.txt
+++ b/Changelog.txt
@@ -40,3 +40,4 @@ Changelog
 11-17-2025 ... 0.9.3.0 ... QS SEE Pruning ....................... (11.9 +/- 8.8)  , (8 + 0.08), (SPRT, 3184),(https://sscg13.pythonanywhere.com/test/1534/)
 11-17-2025 ... 0.9.3.1 ... Makefile Build Compat Changes
 11-22-2025 ... 1.0.0.0 ... NNUE ................................. (270.3 +/- 55.9), (8 + 0.08), (SPRT, 198), (https://sscg13.pythonanywhere.com/test/1571/)
+11-23-2025 ...         ... Multithread Bookgen
