--- a/Changelog.txt
+++ b/Changelog.txt
@@ -41,3 +41,5 @@ Changelog
 11-17-2025 ... 0.9.3.1 ... Makefile Build Compat Changes
 11-22-2025 ... 1.0.0.0 ... NNUE ................................. (270.3 +/- 55.9), (8 + 0.08), (SPRT, 198), (https://sscg13.pythonanywhere.com/test/1571/)
 11-23-2025 ... 1.0.1.0 ... Multithread Bookgen, L1 = 64 ......... (165.6 +/- 37.5), (8 + 0.08), (SPRT, 230), (https://sscg13.pythonanywhere.com/test/1575/)
+11-24-2025 ... 1.0.1.1 ... Generation TT
+
