--- a/Changelog.txt
+++ b/Changelog.txt
@@ -47,4 +47,5 @@ Changelog
 11-27-2025 ... 1.0.4.0 ... Late Move Pruning .................... (6.1 +/- 4.9)   , (8 + 0.08), (SPRT, 7700),(https://sscg13.pythonanywhere.com/test/1606/)
 11-27-2025 ... 1.0.5.0 ... Futility Pruning ..................... (15.9 +/- 10.2) , (8 + 0.08), (SPRT, 1754),(https://sscg13.pythonanywhere.com/test/1608/)
 11-29-2025 ... 1.0.6.0 ... PVS SEE Pruning ...................... (5.4 +/- 4.3)   , (8 + 0.08), (SPRT, 9050),(https://sscg13.pythonanywhere.com/test/1618/)
+12-01-2025 ... 1.0.7.0 ... Less LMR ............................. (29.4 +/- 14.8) , (8 + 0.08), (SPRT, 842) ,(https://sscg13.pythonanywhere.com/test/1631/)
 
