--- a/Changelog.txt
+++ b/Changelog.txt
@@ -55,4 +55,5 @@ Changelog
 12-05-2025 ... 1.1.1.1 ... Improving in RFP ..................... (8.8 +/- 6.6)   , (8 + 0.08), (SPRT, 3332),(https://sscg13.pythonanywhere.com/test/1664/)
 12-05-2025 ... 1.1.1.2 ... NMP Margin ........................... (19.2 +/- 11.0) , (8 + 0.08), (SPRT, 1232),(https://sscg13.pythonanywhere.com/test/1665/)
 12-06-2025 ... 1.1.1.3 ... Improving in NMP Margin .............. (4.4 +/- 3.5)   , (8 + 0.08), (SPRT,11660),(https://sscg13.pythonanywhere.com/test/1675/)
+12-06-2025 ... 1.1.1.4 ... Less Aggressive LMR in PV Nodes ...... (5.4 +/- 4.4)   , (8 + 0.08), (SPRT, 7614),(https://sscg13.pythonanywhere.com/test/1679/)
 
